buildscript {
    ext {
        jena_version = '4.3.2'
        milton_version = '3.0.1.269'
        mockitoVersion = '5.3.1'
        jacksonVersion = '2.14.2' // check what version is used by Jena
        postgresqlVersion = '42.6.0'
    }
}

plugins {
    id 'java'
    id "io.freefair.lombok" version "8.0.1"
    id 'application'
    id 'jacoco'
//    id  'com.github.spotbugs' version '1.6.10'
    id "org.owasp.dependencycheck" version "8.2.1"
    id "com.diffplug.spotless" version "6.25.0"
}

group 'io.fairspace'
version '1.0-SNAPSHOT'

compileJava {
    sourceCompatibility = 17
    targetCompatibility = 17
}

application {
    mainClassName = "io.fairspace.saturn.App"
    applicationDefaultJvmArgs = ['-XX:+ShowCodeDetailsInExceptionMessages']
}

repositories {
    mavenCentral()

    maven {
        url "https://dl.bintray.com/milton/Milton"
    }
}

lombok.version = "1.18.20"

jacoco.toolVersion = "0.8.7"

dependencies {
//    implementation fileTree(dir: 'libs', include: '*.jar') // jena-fuseki-server-*.jar jena-text-es-*.jar
    implementation "org.apache.jena:jena-fuseki-main:${jena_version}"
    implementation "org.apache.jena:jena-text:${jena_version}"
    implementation "io.milton:milton-server-ce:${milton_version}"
    implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:${jacksonVersion}"
    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
    implementation "com.sparkjava:spark-core:2.9.2"
    implementation 'com.pivovarit:throwing-function:1.5.0'
    implementation 'com.google.guava:guava:27.1-jre'
    implementation('com.io-informatics.oss:jackson-jsonld:0.1.1') {
        exclude group: 'com.github.jsonld-java'
    }
    implementation('org.bouncycastle:bcprov-jdk15on:1.65')

    implementation 'org.apache.logging.log4j:log4j-layout-template-json:2.16.0'

    implementation 'org.eclipse.jetty:jetty-proxy:9.4.42.v20210604'

    implementation 'org.keycloak:keycloak-jetty94-adapter:21.0.2'
    implementation 'org.keycloak:keycloak-admin-client:21.0.2'

    implementation "org.postgresql:postgresql:${postgresqlVersion}"
    implementation "com.zaxxer:HikariCP:3.4.5"

    runtimeOnly 'org.apache.logging.log4j:log4j-api:2.19.0'
    runtimeOnly 'org.apache.logging.log4j:log4j-core:2.19.0'
    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j2-impl:2.19.0'

    testImplementation "junit:junit:4.13.2"
    testImplementation "org.mockito:mockito-core:${mockitoVersion}"
    testImplementation "org.testcontainers:postgresql:1.19.4"
    testImplementation('com.github.stefanbirkner:system-rules:1.19.0') {
        exclude group: 'junit', module:'junit-dep'
    }

//    spotbugsPlugins 'com.h3xstream.findsecbugs:findsecbugs-plugin:1.8.0'

    constraints {
//        implementation('com.fasterxml.jackson.core:jackson-databind:2.9.10.1') {
//            because 'previous versions have security vulnerabilities'
//        }
    }
}

jacocoTestReport {
    reports {
        xml.enabled false
        csv.enabled true
    }
}

spotless {
    java {
        palantirJavaFormat()

        importOrder('java|javax', '', 'io.fairspace', '\\#io.fairspace', '\\#')
        removeUnusedImports()

        trimTrailingWhitespace()

        toggleOffOn()
    }
}

dependencyCheck {
    failBuildOnCVSS=9
    suppressionFile='suppressions.xml'
}

test {
    // From JVM 16 there are stricter rules on JDK internal access
    // They also blocks usage of testing library mocking environment variables,
    // That is why this additional arg for tests is needed
    jvmArgs = ['--add-opens', 'java.base/java.util=ALL-UNNAMED']
}

// Plugin disabled for Java 13 - not compatible
//apply plugin: 'com.github.spotbugs'
//
//spotbugs {
//  toolVersion = '3.1.12'
//  effort = "max"
//  reportLevel = "low"
//  ignoreFailures = true
//}

//tasks.withType(com.github.spotbugs.SpotBugsTask) {
//    reports {
//        xml.enabled = false
//        html.enabled = true
//    }
//}
